--- a/arctos/package.xml
+++ b/arctos/package.xml
@@ -8,6 +8,7 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <depend>control_msgs</depend>
   <depend>controller_interface</depend>
@@ -18,6 +19,7 @@
   <depend>rcpputils</depend>
   <depend>realtime_tools</depend>
   <depend>trajectory_msgs</depend>
+  <depend>rclpy</depend>
 
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>joint_state_broadcaster</exec_depend>
@@ -30,7 +32,9 @@
   <exec_depend>rviz2</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
-
+  <exec_depend>python-can</exec_depend>
+  <exec_depend>python3-sshkeyboard-pip</exec_depend>
+  
   <export>
     <build_type>ament_cmake</build_type>
   </export>
