--- a/arctos/package.xml
+++ b/arctos/package.xml
@@ -21,6 +21,8 @@
   <depend>trajectory_msgs</depend>
   <depend>rclpy</depend>
 
+  <exec_depend>forward_command_controller</exec_depend>
+  <exec_depend>joint_trajectory_controller</exec_depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>joint_state_broadcaster</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
