--- a/arctos_moveit/CMakeLists.txt
+++ b/arctos_moveit/CMakeLists.txt
@@ -9,5 +9,5 @@ install(
   DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
   PATTERN "setup_assistant.launch" EXCLUDE)
-install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY config rviz DESTINATION share/${PROJECT_NAME})
 install(FILES .setup_assistant DESTINATION share/${PROJECT_NAME})
