--- a/arctos_moveit/config/moveit_controllers.yaml
+++ b/arctos_moveit/config/moveit_controllers.yaml
@@ -4,9 +4,9 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 
 moveit_simple_controller_manager:
   controller_names:
-    - arctos_arm_controller
+    - joint_trajectory_controller
 
-  arctos_arm_controller:
+  joint_trajectory_controller:
     type: FollowJointTrajectory
     joints:
       - X_joint
